src/objects/Non_Conformance__c.object
<CustomObject>
    <description>This is a Non Conformance object.</description>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TEXT(TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_for_Reporting__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age for Reporting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Non_Conformances2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit__c</fullName>
        <label>Audit Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Unit 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>unit2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>unit3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAPA_Number__c</fullName>
        <label>CAPA Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPA_Required__c</fullName>
        <label>CAPA Required</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_Reopen__c</fullName>
        <formula>Closed__c &amp;&amp; ($User.Id =  OwnerId || $Permission.Reopen_NC)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>OR(ISPICKVAL( NC_Status__c , &apos;Closed&apos;),ISPICKVAL( NC_Status__c , &apos;Void&apos;))</formula>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Containment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Containment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Non-Conformances</relationshipLabel>
        <relationshipName>Customer_Non_Conformances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect_Name__c</fullName>
        <formula>Defect__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Non-Conformances</relationshipLabel>
        <relationshipName>Non_Conformances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department2__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Department 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <formula>Department__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Business_Entity__c</referenceTo>
        <relationshipLabel>Non-Conformances</relationshipLabel>
        <relationshipName>Non_Conformances_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Followers__c</fullName>
        <label>Followers</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <label>Defect Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiating Site</label>
        <referenceTo>Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Non-Conformances (Initiating Site)</relationshipLabel>
        <relationshipName>Non_Conformances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiating_Site_name__c</fullName>
        <formula>Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification_for_CAPA_no_CAPA__c</fullName>
        <label>Justification for CAPA/no CAPA</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Logged_In_user__c</fullName>
        <formula>IF( Owner:User.Id = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In user</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPN_Number__c</fullName>
        <label>MPN Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Supplier_Name__c</fullName>
        <formula>Manufacturer_Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer / Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer / Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manufactuer / Supplier Non-Conformances</relationshipLabel>
        <relationshipName>Non_Conformances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NC_Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NC Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Non_Conformances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NC_Resolution_Code__c</fullName>
        <label>NC Resolution Code</label>
        <picklist>
            <picklistValues>
                <fullName>No Action Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addressed through CAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NC_Source__c</fullName>
        <label>NC Source</label>
        <picklist>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NC_Status__c</fullName>
        <label>NC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NC_Type__c</fullName>
        <inlineHelpText>Select either Product or Process to categorize the event. Based on this field, either &apos;Select Product&apos; or &apos;Select Process&apos; field is displayed.</inlineHelpText>
        <label>NC Type</label>
        <picklist>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NC_Workflow_Status__c</fullName>
        <label>NC Workflow Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Capa_Number__c</fullName>
        <label>New Capa Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurance_Date__c</fullName>
        <label>Occurrence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_NC_Against__c</fullName>
        <label>Other NC Against</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Source__c</fullName>
        <label>Other Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority2__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <formula>Process__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Non-Conformances</relationshipLabel>
        <relationshipName>Non_Conformances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Non-Conformances</relationshipLabel>
        <relationshipName>Non_Conformances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reopen_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reopen By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Non_Conformances3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reopen_Date__c</fullName>
        <label>Reopen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reported_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Reported date Should not be future date and should not be less than Occurrence Date.</inlineHelpText>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporter_Name__c</fullName>
        <formula>Reporter__r.LastName  &amp; &quot;, &quot; &amp;  Reporter__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Non_Conformances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_CAPA_Comment__c</fullName>
        <description>Comments to be saved on Non-Conformance record regarding CAPA.</description>
        <inlineHelpText>Enter comments regarding the CAPA here.</inlineHelpText>
        <label>Resolution CAPA Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution_Closed_Comment__c</fullName>
        <description>Should the Resolution Code be set to discarded or no action required then this comment field will be available for annotating the reason.</description>
        <inlineHelpText>Couldn&apos;t help but notice that you&apos;re not going to do anything about this issue.  May I ask why?</inlineHelpText>
        <label>Resolution Closed Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Required__c</fullName>
        <label>Risk Assessment Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Description__c</fullName>
        <label>Risk Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Occurrence_Name__c</fullName>
        <formula>Risk_Occurrence__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Occurrence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Occurrence__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Risk Occurrence</label>
        <referenceTo>Risk_Occurrence__c</referenceTo>
        <relationshipLabel>Non-Conformances</relationshipLabel>
        <relationshipName>Non_Conformances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Priority__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Risk Priority</label>
        <referenceTo>Risk_Priority__c</referenceTo>
        <relationshipLabel>Non-Conformances</relationshipLabel>
        <relationshipName>Non_Conformances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Severity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Risk Severity</label>
        <referenceTo>Risk_Severity__c</referenceTo>
        <relationshipLabel>Non-Conformances</relationshipLabel>
        <relationshipName>Non_Conformances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Is_Open__c</fullName>
        <description>Determine if NC_Status is exactly &apos;Open&apos;.  Do not include &apos;Reopen&apos; in this field.</description>
        <formula>ISPICKVAL( NC_Status__c , &apos;Open&apos;)</formula>
        <label>Status Is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Manufacturer_Part__c</fullName>
        <label>Supplier / Manufacturer Part #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD_Date10__c</fullName>
        <label>UD_Date10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UD_Date9__c</fullName>
        <label>UD_Date9</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UD_Long_Text_Area7__c</fullName>
        <label>UD_Long_Text_Area7</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UD_Long_Text_Area8__c</fullName>
        <label>UD_Long_Text_Area8</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UD_Picklist3__c</fullName>
        <label>UD_Picklist3</label>
        <picklist>
            <picklistValues>
                <fullName>FPV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPV3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_Picklist4__c</fullName>
        <label>UD_Picklist4</label>
        <picklist>
            <picklistValues>
                <fullName>SPV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPV3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPV4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_Text1__c</fullName>
        <label>UD_Text1</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD_Text2__c</fullName>
        <label>UD_Text2</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD_Text_Area5__c</fullName>
        <label>UD_Text_Area5</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UD_Text_Area6__c</fullName>
        <label>UD_Text_Area6</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <formula>ISPICKVAL(NC_Status__c,&apos;NC Workflow&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workflow</label>
        <type>Checkbox</type>
    </fields>
    <label>Non-Conformance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NC_Type__c</columns>
        <columns>NC_Status__c</columns>
        <columns>NC_Source__c</columns>
        <columns>Defect__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Department__c</columns>
        <columns>Product__c</columns>
        <columns>Initiating_Site__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NC_Owner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Closed</fullName>
        <columns>NAME</columns>
        <columns>NC_Type__c</columns>
        <columns>NC_Status__c</columns>
        <columns>NC_Source__c</columns>
        <columns>Defect__c</columns>
        <columns>Initiating_Site__c</columns>
        <columns>NC_Owner_Name__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Process__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NC_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed</label>
    </listViews>
    <listViews>
        <fullName>All_Void_NCs</fullName>
        <columns>NAME</columns>
        <columns>NC_Type__c</columns>
        <columns>NC_Status__c</columns>
        <columns>NC_Source__c</columns>
        <columns>Defect__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Department__c</columns>
        <columns>Product__c</columns>
        <columns>Initiating_Site__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NC_Owner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NC_Status__c</field>
            <operation>equals</operation>
            <value>Void</value>
        </filters>
        <label>All Void NCs</label>
    </listViews>
    <listViews>
        <fullName>Closed_NC_List</fullName>
        <columns>NAME</columns>
        <columns>NC_Status__c</columns>
        <columns>Age__c</columns>
        <columns>NC_Type__c</columns>
        <columns>NC_Source__c</columns>
        <columns>Defect__c</columns>
        <columns>Initiating_Site__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NC_Owner_Name__c</columns>
        <columns>Owner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NC_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed NC List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyView</fullName>
        <columns>NAME</columns>
        <columns>NC_Type__c</columns>
        <columns>NC_Source__c</columns>
        <columns>Defect__c</columns>
        <columns>Initiating_Site__c</columns>
        <columns>NC_Owner_Name__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Mahesh</value>
        </filters>
        <label>MyView</label>
    </listViews>
    <listViews>
        <fullName>Open_NC_List</fullName>
        <columns>NAME</columns>
        <columns>NC_Status__c</columns>
        <columns>Age__c</columns>
        <columns>NC_Type__c</columns>
        <columns>NC_Source__c</columns>
        <columns>Defect__c</columns>
        <columns>Initiating_Site__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NC_Owner_Name__c</columns>
        <columns>Owner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NC_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open NC List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NC-{00000}</displayFormat>
        <label>Non-Conformance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-Conformances</pluralLabel>
    <recordTypes>
        <fullName>Non_Conformance</fullName>
        <active>true</active>
        <label>Non-Conformance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Defect_Statement_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>Full_Description__c = &apos;&apos;</errorConditionFormula>
        <errorMessage>Defect Statement is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Defect_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Defect__c)</errorConditionFormula>
        <errorDisplayField>Defect__c</errorDisplayField>
        <errorMessage>Defect is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NC_Source_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(NC_Source__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>NC_Source__c</errorDisplayField>
        <errorMessage>NC Source is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NC_Type_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL( NC_Type__c , &quot;--None--&quot;),ISPICKVAL( NC_Type__c , &quot;&quot;))</errorConditionFormula>
        <errorMessage>NC Type is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Occurance_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Occurance_Date__c)</errorConditionFormula>
        <errorDisplayField>Occurance_Date__c</errorDisplayField>
        <errorMessage>Occurance Date Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Occurance_Date_not_future</fullName>
        <active>true</active>
        <errorConditionFormula>Occurance_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Occurance_Date__c</errorDisplayField>
        <errorMessage>Occurrence Date cannot be a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Occurence_Date_greater_than_Reported</fullName>
        <active>true</active>
        <description>Occurrence Date cannot be greater than the Reported Date</description>
        <errorConditionFormula>Occurance_Date__c &gt;  Reported_Date__c</errorConditionFormula>
        <errorDisplayField>Occurance_Date__c</errorDisplayField>
        <errorMessage>Occurrence Date cannot be greater than the Reported Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Source_is_required</fullName>
        <active>true</active>
        <description>&quot;Other Source&quot; field is required if NC Source is &quot;Other&quot;</description>
        <errorConditionFormula>ISPICKVAL( NC_Source__c , &quot;Other&quot;) &amp;&amp; ISBLANK(Other_Source__c)</errorConditionFormula>
        <errorDisplayField>Other_Source__c</errorDisplayField>
        <errorMessage>Other Source field is required because NC Source value is Other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Process_is_required</fullName>
        <active>true</active>
        <description>Process is required if NC type is selected as &quot;Process&quot;.</description>
        <errorConditionFormula>ISPICKVAL( NC_Type__c , &quot;Process&quot;) &amp;&amp;  ISBLANK(Process__c)</errorConditionFormula>
        <errorMessage>Process is required as NC type is Process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_is_required</fullName>
        <active>true</active>
        <description>Product is required if NC type is selected as &quot;Product&quot;.</description>
        <errorConditionFormula>ISPICKVAL( NC_Type__c , &quot;Product&quot;) &amp;&amp;  ISBLANK(Product__c)</errorConditionFormula>
        <errorMessage>Product is required as NC type is product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reported_By_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Reporter__c)</errorConditionFormula>
        <errorMessage>Reporter Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reported_Date_Not_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Reported_Date__c &gt; Today()</errorConditionFormula>
        <errorDisplayField>Reported_Date__c</errorDisplayField>
        <errorMessage>Reported Date cannot be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reported_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Reported_Date__c)</errorConditionFormula>
        <errorDisplayField>Reported_Date__c</errorDisplayField>
        <errorMessage>Reported Date Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reported_Date_cannot_be_before_Occurance</fullName>
        <active>true</active>
        <errorConditionFormula>Reported_Date__c &lt; Occurance_Date__c</errorConditionFormula>
        <errorDisplayField>Reported_Date__c</errorDisplayField>
        <errorMessage>Reported Date cannot be less than Occurrence Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Description_required</fullName>
        <active>false</active>
        <errorConditionFormula>Risk_Description__c=&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Risk_Description__c</errorDisplayField>
        <errorMessage>Risk Description is required.</errorMessage>
    </validationRules>
</CustomObject>